--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">HBJRAcademy</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="favorites">Favorites</string>
+    <string name="new_and_trending">New and trending</string>
+    <string name="new_and_trending_description">Based on player counts and release dates</string>
+    <string name="more_details">More Details</string>
+    <string name="about">About</string>
 </resources>
